# ChangeLog for dev-ruby/ruby-gnomevfs
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gnomevfs/ChangeLog,v 1.2 2004/08/18 17:25:00 usata Exp $

*ruby-gnomevfs-0.10.1 (19 Aug 2004)

  19 Aug 2004; Mamoru KOMACHI <usata@gentoo.org> +ruby-gnomevfs-0.10.1.ebuild:
  Version bumped.

*ruby-gnomevfs-0.10.0 (09 Aug 2004)

  09 Aug 2004; Mamoru KOMACHI <usata@gentoo.org> +metadata.xml,
  +ruby-gnomevfs-0.10.0.ebuild:
  Initial import.
