@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/ruby-libgda
 # Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-libgda/ChangeLog,v 1.1 2004/08/10 17:07:47 usata Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-libgda/ChangeLog,v 1.2 2004/08/30 23:30:59 dholm Exp $
+
+  31 Aug 2004; David Holm <dholm@gentoo.org> ruby-libgda-0.10.0.ebuild:
+  Added to ~ppc.
 
 *ruby-libgda-0.10.0 (09 Aug 2004)
 
