@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/ruby-gnomevfs
 # Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gnomevfs/ChangeLog,v 1.2 2004/08/18 17:25:00 usata Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gnomevfs/ChangeLog,v 1.3 2004/08/30 23:30:09 dholm Exp $
+
+  31 Aug 2004; David Holm <dholm@gentoo.org> ruby-gnomevfs-0.10.1.ebuild:
+  Added to ~ppc.
 
 *ruby-gnomevfs-0.10.1 (19 Aug 2004)
 
